[gd_scene load_steps=20 format=2]

[ext_resource path="res://assets/wizard/wizzard_m_idle_anim_f0.png" type="Texture" id=1]
[ext_resource path="res://assets/wizard/wizzard_m_idle_anim_f1.png" type="Texture" id=2]
[ext_resource path="res://assets/wizard/wizzard_m_idle_anim_f3.png" type="Texture" id=3]
[ext_resource path="res://assets/wizard/wizzard_m_idle_anim_f2.png" type="Texture" id=4]
[ext_resource path="res://assets/light.png" type="Texture" id=5]
[ext_resource path="res://assets/wizard/wizzard_m_run_anim_f0.png" type="Texture" id=6]
[ext_resource path="res://assets/wizard/wizzard_m_run_anim_f2.png" type="Texture" id=7]
[ext_resource path="res://assets/wizard/wizzard_m_run_anim_f3.png" type="Texture" id=8]
[ext_resource path="res://assets/wizard/wizzard_m_run_anim_f1.png" type="Texture" id=9]
[ext_resource path="res://Wizard.gd" type="Script" id=10]
[ext_resource path="res://src/BoxColliders/Hurtbox.tscn" type="PackedScene" id=11]
[ext_resource path="res://assets/frames/wizzard_m_hit_anim_f0.png" type="Texture" id=12]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 5, 8 )

[sub_resource type="Animation" id=2]
resource_name = "hit"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 12 ) ]
}

[sub_resource type="Animation" id=3]
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 1 ), ExtResource( 2 ), ExtResource( 4 ), ExtResource( 3 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "run"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 0.0507658, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 6 ), ExtResource( 9 ), ExtResource( 7 ), ExtResource( 8 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "blink"
length = 0.9
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ false, true, false, true, false, true, false, true, false, true ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [ true ],
"method": "set_invincible"
}, {
"args": [ false ],
"method": "set_invincible"
} ]
}

[sub_resource type="OccluderPolygon2D" id=6]
polygon = PoolVector2Array( 5.50382, 13.7786, -1.49619, 13.7786, -4.49618, 13.7786, -4.49618, 14.7786, 0.503815, 14.7786, 5.50382, 14.7786 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 7, 10 )

[node name="Wizard" type="KinematicBody2D"]
position = Vector2( -1.00763, -6.88547 )
z_index = 3
z_as_relative = false
collision_mask = 6
script = ExtResource( 10 )
SPEED = 65

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -7 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 1.00763, -1.11453 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "idle"
anims/hit = SubResource( 2 )
anims/idle = SubResource( 3 )
anims/run = SubResource( 4 )

[node name="BlinkAnimation" type="AnimationPlayer" parent="."]
anims/blink = SubResource( 5 )

[node name="SpellPosition" type="Position2D" parent="."]
modulate = Color( 0.176471, 0.027451, 0.027451, 1 )
show_behind_parent = true
position = Vector2( 12, 0 )

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
position = Vector2( 0.503815, -7.8931 )
occluder = SubResource( 6 )

[node name="Light2D" type="Light2D" parent="."]
visible = false
position = Vector2( 1.00763, -0.11453 )
texture = ExtResource( 5 )
texture_scale = 0.2
energy = 0.8
range_z_min = -64
range_z_max = 64
__meta__ = {
"_editor_description_": "			"
}

[node name="CameraFollow" type="RemoteTransform2D" parent="."]
update_rotation = false
update_scale = false

[node name="Hurtbox" parent="." instance=ExtResource( 11 )]
collision_layer = 16

[node name="Collider" parent="Hurtbox" index="0"]
modulate = Color( 1, 0, 0, 1 )
position = Vector2( 1.00763, -1.11453 )
shape = SubResource( 7 )

[node name="InvTimer" type="Timer" parent="."]
one_shot = true
[connection signal="hit" from="Hurtbox" to="." method="_on_Hurtbox_hit"]
[connection signal="timeout" from="InvTimer" to="." method="_on_InvTimer_timeout"]

[editable path="Hurtbox"]
